--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -98,8 +98,7 @@ nav.sb-topnav.navbar.navbar-expand.navbar-dark.bg-dark
           | Logged in as:
         |  Start Bootstrap 
   #layoutSidenav_content
-    h1
-    | Welcome#index
+    h1 Welcome#index
 
     .card.mb-2
       .card-body
