--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,17 +1,17 @@
 nav.sb-topnav.navbar.navbar-expand.navbar-dark.bg-dark
   a.navbar-brand.ps-3 href='#' Start Bootstrap
   button.btn.btn-link.btn-sm.order-1.order-lg-0.me-4.me-lg-0#sidebarToggle href='#!'
-    i.fas.fa-bars
+    i.fa-solid.fa-bars
   form.d-none.d-md-inline-block.form-inline.ms-auto.me-0.me-md-3.my-2.my-md-0
     .input-group
       input.form-control[type="text" placeholder="Search for..." aria-label="Search for..." aria-describedby="btnNavbarSearch"]
       button#btnNavbarSearch.btn.btn-primary[type="button"]
-        i.fas.fa-search
+        i.fa-solid.fa-search
 
   ul.navbar-nav.ms-auto.ms-md-0.me-3.me-lg-4
     li.nav-item.dropdown
     a.nav-link.dropdown-toggle#navbarDropdown href='#' role="button" data-bs-toggle="dropdown" aria-expanded="false"
-      i.fas.fa-user.fa-fw
+      i.fa-solid.fa-user.fa-fw
       ul.dropdown-menu.dropdown-menu-end aria-labelledby="navbarDropdown"
         li
           a.dropdown-item href="#!" Settings
@@ -31,17 +31,17 @@ nav.sb-topnav.navbar.navbar-expand.navbar-dark.bg-dark
           a.nav-link[href="index.html"]
 
           .sb-nav-link-icon
-            i.fas.fa-tachometer-alt
+            i.fa-solid.fa-tachometer-alt
           |  Dashboard 
           .sb-sidenav-menu-heading
             | Interface
           a.nav-link.collapsed[href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts"]
 
           .sb-nav-link-icon
-            i.fas.fa-columns
+            i.fa-solid.fa-columns
           |  Layouts 
           .sb-sidenav-collapse-arrow
-            i.fas.fa-angle-down
+            i.fa-solid.fa-angle-down
           #collapseLayouts.collapse[aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion"]
             nav.sb-sidenav-menu-nested.nav
               a.nav-link[href="layout-static.html"]
@@ -51,16 +51,16 @@ nav.sb-topnav.navbar.navbar-expand.navbar-dark.bg-dark
           a.nav-link.collapsed[href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages"]
 
           .sb-nav-link-icon
-            i.fas.fa-book-open
+            i.fa-solid.fa-book-open
           |  Pages 
           .sb-sidenav-collapse-arrow
-            i.fas.fa-angle-down
+            i.fa-solid.fa-angle-down
           #collapsePages.collapse[aria-labelledby="headingTwo" data-bs-parent="#sidenavAccordion"]
             nav#sidenavAccordionPages.sb-sidenav-menu-nested.nav.accordion
               a.nav-link.collapsed[href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapseAuth" aria-expanded="false" aria-controls="pagesCollapseAuth"]
                 |  Authentication 
               .sb-sidenav-collapse-arrow
-                i.fas.fa-angle-down
+                i.fa-solid.fa-angle-down
               #pagesCollapseAuth.collapse[aria-labelledby="headingOne" data-bs-parent="#sidenavAccordionPages"]
                 nav.sb-sidenav-menu-nested.nav
                   a.nav-link[href="login.html"]
@@ -72,7 +72,7 @@ nav.sb-topnav.navbar.navbar-expand.navbar-dark.bg-dark
               a.nav-link.collapsed[href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapseError" aria-expanded="false" aria-controls="pagesCollapseError"]
                 |  Error 
               .sb-sidenav-collapse-arrow
-                i.fas.fa-angle-down
+                i.fa-solid.fa-angle-down
               #pagesCollapseError.collapse[aria-labelledby="headingOne" data-bs-parent="#sidenavAccordionPages"]
                 nav.sb-sidenav-menu-nested.nav
                   a.nav-link[href="401.html"]
@@ -86,12 +86,12 @@ nav.sb-topnav.navbar.navbar-expand.navbar-dark.bg-dark
           a.nav-link[href="charts.html"]
 
           .sb-nav-link-icon
-            i.fas.fa-chart-area
+            i.fa-solid.fa-chart-area
           |  Charts 
           a.nav-link[href="tables.html"]
 
           .sb-nav-link-icon
-            i.fas.fa-table
+            i.fa-solid.fa-table
           |  Tables 
       .sb-sidenav-footer
         .small
