--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,6 +1,51 @@
 == render "layouts/navbar"
 
-.card.mb-2
-  .card-body
-    p.card-text
-      | Find me in app/views/welcome/index.html.erb
+.container-fluid
+  .row
+    == render "layouts/sidebar"
+
+    main.col-md-9.col-lg-10
+      .card.mb-2
+        .card-body
+          p.card-text
+            | Find me in app/views/welcome/index.html.erb
+      .card.mb-2
+        .card-body
+          p.card-text
+            | Find me in app/views/welcome/index.html.erb
+      .card.mb-2
+        .card-body
+          p.card-text
+            | Find me in app/views/welcome/index.html.erb
+      .card.mb-2
+        .card-body
+          p.card-text
+            | Find me in app/views/welcome/index.html.erb
+      .card.mb-2
+        .card-body
+          p.card-text
+            | Find me in app/views/welcome/index.html.erb
+      .card.mb-2
+        .card-body
+          p.card-text
+            | Find me in app/views/welcome/index.html.erb
+      .card.mb-2
+        .card-body
+          p.card-text
+            | Find me in app/views/welcome/index.html.erb
+      .card.mb-2
+        .card-body
+          p.card-text
+            | Find me in app/views/welcome/index.html.erb
+      .card.mb-2
+        .card-body
+          p.card-text
+            | Find me in app/views/welcome/index.html.erb
+      .card.mb-2
+        .card-body
+          p.card-text
+            | Find me in app/views/welcome/index.html.erb
+      .card.mb-2
+        .card-body
+          p.card-text
+            | Find me in app/views/welcome/index.html.erb
