remove font-awesome

--- a/app/views/layouts/_sidebar.html.slim
+++ b/app/views/layouts/_sidebar.html.slim
@@ -24,7 +24,9 @@
       ul.nav.flex-column.mb-auto
         li.nav-item.lyrics-site-sidenav-item
           a.nav-link.d-flex.align-items-center.gap-2[href="#"]
+            i.bi.bi-gear-fill
             |  Settings 
         li.nav-item.lyrics-site-sidenav-item
           a.nav-link.d-flex.align-items-center.gap-2[href="#"]
+            i.bi.bi-box-arrow-right
             |  Sign out 
