--- a/app/views/admin/genres/edit.html.slim
+++ b/app/views/admin/genres/edit.html.slim
@@ -1,21 +1,28 @@
-h1 Editing genre
+== render "layouts/navbar"
 
-= form_with scope: :genre, url: admin_genre_path(@genre), method: :patch do |form|
-  - if @genre.errors.any?
-    div style="color: red"
-      h2 = "#{pluralize(@genre.errors.count, "error")} prohibited this genre from being saved:"
-      ul
-        - @genre.errors.each do |error|
-          li = error.full_message
+.container-fluid
+  .row
+    == render "layouts/sidebar"
 
-  div
-    = form.label :name, style: "display: block"
-    = form.text_field :name
+    main.col-md-9.col-lg-10
+      h1 Editing genre
 
-  div
-    = form.submit
+      = form_with scope: :genre, url: admin_genre_path(@genre), method: :patch do |form|
+        - if @genre.errors.any?
+          div style="color: red"
+            h2 = "#{pluralize(@genre.errors.count, "error")} prohibited this genre from being saved:"
+            ul
+              - @genre.errors.each do |error|
+                li = error.full_message
 
-br
+        div
+          = form.label :name, style: "display: block"
+          = form.text_field :name
 
-div
-  =< link_to "Back to genres", admin_genres_path
+        div
+          = form.submit
+
+      br
+
+      div
+        =< link_to "Back to genres", admin_genres_path
