--- a/app/views/admin/genres/index.html.slim
+++ b/app/views/admin/genres/index.html.slim
@@ -1,12 +1,19 @@
-p style="color: green" = notice
+== render "layouts/navbar"
 
-h1 Genres
+.container-fluid
+  .row
+    == render "layouts/sidebar"
 
-#genres
-  - @genres.each do |genre|
-    == render genre
-    p
-      = link_to "Edit this genre", edit_admin_genre_path(genre)
-    = button_to "Destroy this genre", admin_genre_path(genre), method: :delete
+    main.col-md-9.col-lg-10
+      p style="color: green" = notice
 
-= link_to "New genre", new_admin_genre_path
+      h1 Genres
+
+      #genres
+        - @genres.each do |genre|
+          == render genre
+          p
+            = link_to "Edit this genre", edit_admin_genre_path(genre)
+          = button_to "Destroy this genre", admin_genre_path(genre), method: :delete
+
+      = link_to "New genre", new_admin_genre_path
