--- a/app/views/admin/songs/edit.html.slim
+++ b/app/views/admin/songs/edit.html.slim
@@ -1,32 +1,39 @@
-h1 Editing song
+== render "layouts/navbar"
 
-= form_with scope: :song, url: admin_song_path(@song), method: :patch do |form|
-  - if @song.errors.any?
-    div style="color: red"
-      h2 = "#{pluralize(@song.errors.count, "error")} prohibited this song from being saved:"
-      ul
-        - @song.errors.each do |error|
-          li = error.full_message
+.container-fluid
+  .row
+    == render "layouts/sidebar"
 
-  div
-    = form.label :name, style: "display: block"
-    = form.text_field :name
+    main.col-md-9.col-lg-10
+      h1 Editing song
 
-  div
-    = form.label :lyric, style: "display: block"
-    = form.text_area :lyric
+      = form_with scope: :song, url: admin_song_path(@song), method: :patch do |form|
+        - if @song.errors.any?
+          div style="color: red"
+            h2 = "#{pluralize(@song.errors.count, "error")} prohibited this song from being saved:"
+            ul
+              - @song.errors.each do |error|
+                li = error.full_message
 
-  div
-    = form.label :genre_id, style: "display: block"
-    = form.text_field :genre_id
+        div
+          = form.label :name, style: "display: block"
+          = form.text_field :name
 
-  div
-    = form.submit
+        div
+          = form.label :lyric, style: "display: block"
+          = form.text_area :lyric
+
+        div
+          = form.label :genre_id, style: "display: block"
+          = form.text_field :genre_id
+
+        div
+          = form.submit
 
 
-br
+      br
 
-div
-  => link_to "Show this song", admin_song_path(@song)
-  '|
-  =< link_to "Back to songs", admin_songs_path
+      div
+        => link_to "Show this song", admin_song_path(@song)
+        '|
+        =< link_to "Back to songs", admin_songs_path
