--- a/app/views/layouts/_sidebar.html.slim
+++ b/app/views/layouts/_sidebar.html.slim
@@ -3,11 +3,9 @@
     .offcanvas-body.d-md-flex.flex-column.p-0.pt-lg-3.overflow-y-auto
       ul.nav.flex-column
         li.nav-item.lyrics-site-sidenav-item
-          a.nav-link.d-flex.align-items-center.gap-2.active[aria-current="page" href="#"]
-            |  Dashboard 
+          = link_to "Genres manage", admin_genres_path, class: 'nav-link d-flex align-items-center gap-2 active'
         li.nav-item.lyrics-site-sidenav-item
-          a.nav-link.d-flex.align-items-center.gap-2[href="#"]
-            |  Orders 
+          = link_to "Songs manage", admin_songs_path, class: 'nav-link d-flex align-items-center gap-2 active'
         li.nav-item.lyrics-site-sidenav-item
           a.nav-link.d-flex.align-items-center.gap-2[href="#"]
             |  Products 
