--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -1,6 +1,8 @@
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons';
-
+.lyrics-site-content{
+  min-height: 700px;
+}
 .lyrics-site-sidenav-item{
   a{
     color: #fff;
