--- a/app/views/admin/genres/edit.html.slim
+++ b/app/views/admin/genres/edit.html.slim
@@ -1,28 +1,28 @@
 == render "layouts/navbar"
 
 .container-fluid
-  .row
+  .row.lyrics-site-content
     == render "layouts/sidebar"
 
-    main.col-md-9.col-lg-10
+    main.col-md-9.col-lg-10.mt-2.mb-2
       h1 Editing genre
 
       = form_with scope: :genre, url: admin_genre_path(@genre), method: :patch do |form|
         - if @genre.errors.any?
-          div style="color: red"
+          div.alert.alert-danger
             h2 = "#{pluralize(@genre.errors.count, "error")} prohibited this genre from being saved:"
             ul
               - @genre.errors.each do |error|
                 li = error.full_message
 
-        div
-          = form.label :name, style: "display: block"
-          = form.text_field :name
+        .mb-3
+          = form.label :name, class: 'form-label'
+          = form.text_field :name, class: 'form-control'
 
         div
-          = form.submit
+          = form.submit 'Save Genre', class: 'btn btn-primary'
 
       br
 
       div
-        =< link_to "Back to genres", admin_genres_path
+        = link_to "Back to genres", admin_genres_path, class: 'btn btn-secondary'
