--- a/app/views/admin/genres/index.html.slim
+++ b/app/views/admin/genres/index.html.slim
@@ -1,19 +1,34 @@
 == render "layouts/navbar"
 
 .container-fluid
-  .row
+  .row.lyrics-site-content
     == render "layouts/sidebar"
 
-    main.col-md-9.col-lg-10
-      p style="color: green" = notice
+    main.col-md-9.col-lg-10.mt-2.mb-2
+      - if notice
+        p.alert.alert-success = notice
 
       h1 Genres
 
-      #genres
-        - @genres.each do |genre|
-          == render genre
-          p
-            = link_to "Edit this genre", edit_admin_genre_path(genre)
-          = button_to "Destroy this genre", admin_genre_path(genre), method: :delete
+      table.table.table-bordered#genres
+        thead.table-dark
+          tr
+            th[scope='col']
+              | #
+            th[scope='col']
+              | Name
+            th[scope='col', colspan=2]
+              | Action
+        tbody.table-group-divider
+          - @genres.each do |genre|
+            tr
+              td
+                =< genre.id
+              td
+                =< genre.name
+              td
+                = link_to "Edit this genre", edit_admin_genre_path(genre), class: 'btn btn-warning'
+              td
+                = button_to "Destroy this genre", admin_genre_path(genre), method: :delete, class: 'btn btn-danger'
 
-      = link_to "New genre", new_admin_genre_path
+      = link_to "New genre", new_admin_genre_path, class: 'btn btn-primary'
