--- a/app/views/admin/songs/new.html.slim
+++ b/app/views/admin/songs/new.html.slim
@@ -1,37 +1,37 @@
 == render "layouts/navbar"
 
 .container-fluid
-  .row
+  .row.lyrics-site-content
     == render "layouts/sidebar"
 
-    main.col-md-9.col-lg-10
+    main.col-md-9.col-lg-10.mt-2.mb-2
       h1 New song
 
-      = form_with scope: :genre, url: admin_songs_path do |form|
+      = form_with scope: :song, url: admin_songs_path do |form|
         - if @song.errors.any?
-          div style="color: red"
+          .alert.alert-danger
             h2 = "#{pluralize(@song.errors.count, "error")} prohibited this song from being saved:"
             ul
               - @song.errors.each do |error|
                 li = error.full_message
 
-        div
-          = form.label :name, style: "display: block"
-          = form.text_field :name
+        .mb-3
+          = form.label :name, class: 'form-label'
+          = form.text_field :name, class: 'form-control'
+
+        .mb-3
+          = form.label :lyric, class: 'form-label'
+          = form.text_area :lyric, class: 'form-control'
+
+        .mb-3
+          = form.label :genre_id, class: 'form-label'
+          = select 'song', 'genre_id', Genre.all.collect {|genre| [ genre.name, genre.id ] }, class: 'form-control'
 
         div
-          = form.label :lyric, style: "display: block"
-          = form.text_area :lyric
-
-        div
-          = form.label :genre_id, style: "display: block"
-          = form.text_field :genre_id
-
-        div
-          = form.submit
+          = form.submit 'Create Song', class: 'btn btn-primary'
 
 
       br
 
       div
-        = link_to "Back to songs", admin_songs_path
+        = link_to "Back to songs", admin_songs_path, class: 'btn btn-secondary'
