--- a/app/views/admin/songs/edit.html.slim
+++ b/app/views/admin/songs/edit.html.slim
@@ -1,10 +1,10 @@
 == render "layouts/navbar"
 
 .container-fluid
-  .row
+  .row.lyrics-site-content
     == render "layouts/sidebar"
 
-    main.col-md-9.col-lg-10
+    main.col-md-9.col-lg-10.mt-2.mb-2
       h1 Editing song
 
       = form_with scope: :song, url: admin_song_path(@song), method: :patch do |form|
@@ -25,10 +25,10 @@
 
         .mb-3
           = form.label :genre_id, class: 'form-label'
-          = form.text_field :genre_id, class: 'form-control'
+          = select 'song', 'genre_id', Genre.all.collect {|genre| [ genre.name, genre.id ] }, class: 'form-control'
 
         div
-          = form.submit, class: 'btn btn-primary'
+          = form.submit 'Save song', class: 'btn btn-primary'
 
 
       br
