--- a/app/views/admin/songs/index.html.slim
+++ b/app/views/admin/songs/index.html.slim
@@ -1,11 +1,12 @@
 == render "layouts/navbar"
 
 .container-fluid
-  .row
+  .row.lyrics-site-content
     == render "layouts/sidebar"
 
-    main.col-md-9.col-lg-10
-      p style="color: green" = notice
+    main.col-md-9.col-lg-10.mt-2.mb-2
+      - if notice
+        p.alert.alert-success = notice
 
       h1 Songs
 
