--- a/app/views/admin/genres/index.html.slim
+++ b/app/views/admin/genres/index.html.slim
@@ -29,6 +29,6 @@
               td
                 = link_to "Edit this genre", edit_admin_genre_path(genre), class: 'btn btn-warning'
               td
-                = button_to "Destroy this genre", admin_genre_path(genre), method: :delete, class: 'btn btn-danger'
+                = button_to "Delete this genre", admin_genre_path(genre), method: :delete, class: 'btn btn-danger'
 
       = link_to "New genre", new_admin_genre_path, class: 'btn btn-primary'
