--- a/app/views/admin/songs/edit.html.slim
+++ b/app/views/admin/songs/edit.html.slim
@@ -36,4 +36,4 @@
       div
         => link_to "Show this song", admin_song_path(@song), class: 'btn btn-secondary'
         '|
-        =< link_to "Back to songs", admin_songs_path, class: 'btn btn-secondary'
+        =< link_to "Back to songs", admin_songs_path, class: 'btn btn-outline-secondary'
