--- a/app/views/admin/songs/show.html.slim
+++ b/app/views/admin/songs/show.html.slim
@@ -10,9 +10,9 @@
 
       == render @song
 
-      div
-        => link_to "Edit this song", edit_admin_song_path(@song)
+      .mb-2
+        => link_to "Edit this song", edit_admin_song_path(@song), class: 'btn btn-warning'
         '|
-        =< link_to "Back to songs", admin_songs_path
+        =< link_to "Back to songs", admin_songs_path, class: 'btn btn-secondary'
 
-        = button_to "Destroy this song", admin_song_path(@song), method: :delete
+      = button_to "Delete this song", admin_song_path(@song), method: :delete, class: 'btn btn-danger'
