--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -8,3 +8,13 @@
     color: #fff;
   }
 }
+.layoutAuthentication {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+
+  .layoutAuthentication_content{
+    min-width: 0;
+    flex-grow: 1;
+  }
+}
