--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -1,11 +1,26 @@
-h2
-  | Forgot your password?
-= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
-  = render "devise/shared/error_messages", resource: resource
-  .field
-    = f.label :email
-  br
-  = f.email_field :email, autofocus: true, autocomplete: "email"
-  .actions
-    = f.submit "Send me reset password instructions"
-= render "devise/shared/links"
+- content_for :title, 'Reset Password'
+- content_for :body_class, 'bg-primary'
+.layoutAuthentication
+  .layoutAuthentication_content
+    main
+      .container
+        .row.justify-content-center
+          .col-lg-5
+            .card.shadow-lg.border-0.rounded-lg.mt-5
+              .card-header
+                h3.text-center.font-weight-light.my-4
+                  | Password Recovery
+              .card-body
+                .small.mb-3.text-muted
+                  | Enter your email address and we will send you a link to reset your password.
+                = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
+                  = render "devise/shared/error_messages", resource: resource
+                  .form-floating.mb-3
+                    = f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control'
+                    = f.label :email
+                  .mt-4.mb-3
+                    .d-grid
+                      = f.submit 'Send me reset password instructions', class: 'btn btn-primary btn-block'
+                = link_to "Have an account? Go to login", new_session_path(resource_name)
+              .card-footer.text-center.py-3
+                = link_to 'Need an account? Sign up!', new_registration_path(resource_name)
