--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -4,7 +4,17 @@
   min-height: 700px;
 }
 .lyrics-site-sidenav-item{
-  a{
+  a, button{
     color: #fff;
+  }
+}
+.layoutAuthentication {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+
+  .layoutAuthentication_content{
+    min-width: 0;
+    flex-grow: 1;
   }
 }
