--- a/app/views/layouts/_navbar.html.slim
+++ b/app/views/layouts/_navbar.html.slim
@@ -1,6 +1,6 @@
 nav.navbar.navbar-expand-lg.bg-body-tertiary.bg-dark.border-bottom.border-bottom-dark[data-bs-theme="dark"]
   .container-fluid
-    a.navbar-brand[href="https://getbootstrap.com/docs/5.3/examples/navbar-static/#"]
+    a.navbar-brand[href="#"]
       | Admin Dashboard
     button.navbar-toggler[type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation"]
       span.navbar-toggler-icon
