--- a/app/views/songs/index.html.slim
+++ b/app/views/songs/index.html.slim
@@ -1,2 +1,9 @@
-h1 Songs#index
-p Find me in app/views/songs/index.html.slim
+- content_for :title, 'Japanese lyrics site'
+
+== render 'layouts/navbar_for_viewer'
+
+- @songs.each do |song|
+  h2
+    = song.name
+  div
+    = song.genre.name
