--- a/app/views/songs/show.html.slim
+++ b/app/views/songs/show.html.slim
@@ -1,2 +1,17 @@
-h1 Songs#show
-p Find me in app/views/songs/show.html.slim
+- content_for :title, @song.name
+
+== render 'layouts/navbar_for_viewer'
+
+.container-fluid
+  .row.mt-2
+    main.col-md-9.col-lg-10
+      .card.mb-2
+        .card-title
+          h3 = @song.name
+        .card-body
+          strong Genre:
+          = @song.genre.name 
+          div
+            strong Lyric:
+            =< simple_format(@song.lyric)
+      =< link_to "Back to songs", songs_path, class: 'btn btn-secondary'
