--- a/app/views/admin/artists/show.html.slim
+++ b/app/views/admin/artists/show.html.slim
@@ -1,7 +1,7 @@
 == render "layouts/navbar"
 
 .container-fluid
-  .row.biographys-site-content
+  .row.lyrics-site-content
     == render "layouts/sidebar"
 
     main.col-md-9.col-lg-10.mt-2.mb-2
