--- a/app/views/layouts/_sidebar.html.slim
+++ b/app/views/layouts/_sidebar.html.slim
@@ -3,12 +3,11 @@
     .offcanvas-body.d-md-flex.flex-column.p-0.pt-lg-3.overflow-y-auto
       ul.nav.flex-column
         li.nav-item.lyrics-site-sidenav-item
-          = link_to "Genres manage", admin_genres_path, class: 'nav-link d-flex align-items-center gap-2 active'
-        li.nav-item.lyrics-site-sidenav-item
           = link_to "Songs manage", admin_songs_path, class: 'nav-link d-flex align-items-center gap-2 active'
         li.nav-item.lyrics-site-sidenav-item
-          a.nav-link.d-flex.align-items-center.gap-2[href="#"]
-            |  Products 
+          = link_to "Artists manage", admin_artists_path, class: 'nav-link d-flex align-items-center gap-2'
+        li.nav-item.lyrics-site-sidenav-item
+          = link_to "Genres manage", admin_genres_path, class: 'nav-link d-flex align-items-center gap-2'
         li.nav-item.lyrics-site-sidenav-item
           a.nav-link.d-flex.align-items-center.gap-2[href="#"]
             |  Customers 
