--- a/app/views/songs/show.html.slim
+++ b/app/views/songs/show.html.slim
@@ -9,8 +9,12 @@
         .card-title
           h3 = @song.name
         .card-body
-          strong Genre:
-          = @song.genre.name 
+          p
+            strong Genre:
+            = @song.genre.name
+          p
+            strong Artists:
+            = artists_list @song.artists
           div
             strong Lyric:
             =< simple_format(@song.lyric)
