--- a/app/views/admin/artists/edit.html.slim
+++ b/app/views/admin/artists/edit.html.slim
@@ -33,3 +33,5 @@
         => link_to "Show this artist", admin_artist_path(@artist), class: 'btn btn-secondary'
         '|
         =< link_to "Back to artists", admin_artists_path, class: 'btn btn-outline-secondary'
+
+== render 'layouts/footer'
