--- a/app/views/admin/artists/show.html.slim
+++ b/app/views/admin/artists/show.html.slim
@@ -16,3 +16,5 @@
         =< link_to "Back to artists", admin_artists_path, class: 'btn btn-secondary'
 
       = button_to "Delete this artist", admin_artist_path(@artist), method: :delete, class: 'btn btn-danger'
+
+== render 'layouts/footer'
