--- a/app/views/admin/songs/show.html.slim
+++ b/app/views/admin/songs/show.html.slim
@@ -16,3 +16,5 @@
         =< link_to "Back to songs", admin_songs_path, class: 'btn btn-secondary'
 
       = button_to "Delete this song", admin_song_path(@song), method: :delete, class: 'btn btn-danger'
+
+== render 'layouts/footer'
