--- a/app/views/admin/artists/index.html.slim
+++ b/app/views/admin/artists/index.html.slim
@@ -34,3 +34,5 @@
                   = button_to "Delete this artist", admin_artist_path(artist), method: :delete, class: 'btn btn-danger'
 
       = link_to "New artist", new_admin_artist_path, class: 'btn btn-primary'
+
+== render 'layouts/footer'
