--- a/app/views/admin/genres/index.html.slim
+++ b/app/views/admin/genres/index.html.slim
@@ -32,3 +32,5 @@
                 = button_to "Delete this genre", admin_genre_path(genre), method: :delete, class: 'btn btn-danger'
 
       = link_to "New genre", new_admin_genre_path, class: 'btn btn-primary'
+
+== render 'layouts/footer'
