--- a/app/views/admin/songs/edit.html.slim
+++ b/app/views/admin/songs/edit.html.slim
@@ -42,3 +42,5 @@
         => link_to "Show this song", admin_song_path(@song), class: 'btn btn-secondary'
         '|
         =< link_to "Back to songs", admin_songs_path, class: 'btn btn-outline-secondary'
+
+== render 'layouts/footer'
