--- a/app/views/admin/songs/index.html.slim
+++ b/app/views/admin/songs/index.html.slim
@@ -42,3 +42,5 @@
                   = button_to "Delete this song", admin_song_path(song), method: :delete, class: 'btn btn-danger'
 
       = link_to "New song", new_admin_song_path, class: 'btn btn-primary'
+
+== render 'layouts/footer'
