--- a/app/views/songs/index.html.slim
+++ b/app/views/songs/index.html.slim
@@ -3,7 +3,7 @@
 == render 'layouts/navbar_for_viewer'
 
 .container-fluid
-  .row.mt-2
+  .row.mt-2.lyrics-site-content
     main.col-md-9.col-lg-10
       - @songs.each do |song|
         .card.mb-2
@@ -16,3 +16,5 @@
               = song.genre.name 
             p
               = link_to 'View lyrics', song_path(song)
+
+== render 'layouts/footer'
