--- a/app/views/layouts/_navbar_for_viewer.html.slim
+++ b/app/views/layouts/_navbar_for_viewer.html.slim
@@ -1,20 +1,17 @@
 nav.navbar.navbar-expand-lg[style='background-color: #e3f2fd;' data-bs-theme='light']
   .container-fluid
-    a.navbar-brand[href='#']
-      | Japanese lyrics site
+    = link_to 'Japanese lyrics site', root_path, class: 'navbar-brand'
     button.navbar-toggler[type='button' data-bs-toggle='collapse' data-bs-target='#navbarColor03' aria-controls='navbarColor03' aria-expanded='false' aria-label='Toggle navigation']
       span.navbar-toggler-icon
     #navbarColor03.collapse.navbar-collapse
       ul.navbar-nav.me-auto.mb-2.mb-lg-0
         li.nav-item
-          a.nav-link.active[aria-current='page' href='#']
-            | Home
+          = link_to 'Home', root_path, class: 'nav-link active'
         li.nav-item
           a.nav-link[href='#']
             | Artists
         li.nav-item
-          a.nav-link[href='#']
-            | Genres
+          = link_to 'Genres', genres_path, class: 'nav-link'
         li.nav-item
           a.nav-link[href='#']
             | About
