--- a/app/views/songs/show.html.slim
+++ b/app/views/songs/show.html.slim
@@ -11,7 +11,7 @@
         .card-body
           p
             strong Genre:
-            = @song.genre.name
+            = link_to @song.genre.name, genre_path(@song.genre)
           p
             strong Artists:
             = artists_list @song.artists
