--- a/app/views/genres/show.html.slim
+++ b/app/views/genres/show.html.slim
@@ -1,3 +1,24 @@
-h1 Genres#show
-p Find me in app/views/genres/show.html.slim
-= @genre.name
+- content_for :title, 'Japanese lyrics site'
+
+== render 'layouts/navbar_for_viewer'
+
+h1
+  = @genre.name
+
+.container-fluid
+  .row.mt-2.lyrics-site-content
+    main.col-md-9.col-lg-10
+      - @genre.songs.each do |song|
+        .card.mb-2
+          .card-title
+            h3 = song.name
+          .card-body
+            p
+              = artists_list song.artists
+            p
+              = song.genre.name 
+            p
+              = link_to 'View lyrics', song_path(song)
+
+== render 'layouts/footer'
+
