--- a/app/views/admin/songs/new.html.slim
+++ b/app/views/admin/songs/new.html.slim
@@ -26,7 +26,7 @@
 
         .mb-3
           = form.label :genre_id, class: 'form-label'
-          = select 'song', 'genre_id', Genre.all.collect {|genre| [ genre.name, genre.id ] }, {}, class: 'form-control'
+          = form.select :genre_id, Genre.all.collect {|genre| [ genre.name, genre.id ] }, {}, class: 'form-control'
 
         .mb-3
           = form.label :lyric, class: 'form-label'
