--- a/app/views/admin/songs/new.html.slim
+++ b/app/views/admin/songs/new.html.slim
@@ -19,10 +19,29 @@
           = form.label :name, class: 'form-label'
           = form.text_field :name, class: 'form-control'
 
-        .mb-3
-          = form.label :artist, class: 'form-label'
-          br
-          = form.collection_check_boxes :artist_ids, Artist.all, :id, :name, { hide_label: true }, class: 'form-check-input'
+        = form.fields_for :artists_songs do |artists_song_form|
+          / Main Artist.
+          .mb-3
+            = artists_song_form.label :artist_id, class: 'form-label'
+            = artists_song_form.select :artist_id, Artist.all.collect { |artist| [artist.name, artist.id] }, {}, class: 'form-control'
+
+            = artists_song_form.label :artist_type, class: 'form-label'
+            = artists_song_form.select :artist_type, ArtistsSong.artist_types.keys.map { |type| [type.capitalize, type] }, {}, class: 'form-control'
+
+          / Featuring Artist.
+          div[data-controller="artists-song"]
+            = form.fields_for :artists_songs, ArtistsSong.new, child_index: 'featuring_index' do |artists_song_form|
+              .mb-3.featuring-field-template style="display: none;"
+                = artists_song_form.label :artist_id, class: 'form-label'
+                = artists_song_form.select :artist_id, Artist.all.collect { |artist| [artist.name, artist.id] }, {}, class: 'form-control'
+
+                = artists_song_form.label :artist_type, class: 'form-label'
+                = artists_song_form.select :artist_type, ArtistsSong.artist_types.keys.map { |type| [type.capitalize, type] }, {}, class: 'form-control'
+
+            div[data-target="artists-song.fields"]
+              / This is where new "Featuring" fields will be added dynamically.
+          button.btn.btn-link[data-action="click->artists-song#addFeaturingField"]
+            | Add Featuring Artist
 
         .mb-3
           = form.label :genre_id, class: 'form-label'
