--- a/app/views/genres/index.html.slim
+++ b/app/views/genres/index.html.slim
@@ -13,4 +13,6 @@ h1 All Genres
             p
               = link_to genre.name, genre_path(genre)
 
+  = paginate @genres, theme: 'bootstrap-5'
+
 == render 'layouts/footer'
