--- a/app/views/songs/index.html.slim
+++ b/app/views/songs/index.html.slim
@@ -17,4 +17,6 @@
             p
               = link_to 'View lyrics', song_path(song)
 
+    = paginate @songs, theme: 'bootstrap-5'
+
 == render 'layouts/footer'
