--- a/app/views/admin/songs/new.html.slim
+++ b/app/views/admin/songs/new.html.slim
@@ -29,7 +29,7 @@
             = artists_song_form.select :artist_type, ArtistsSong.artist_types.keys.map { |type| [type.capitalize, type] }, {}, class: 'form-control'
 
           / Featuring Artist.
-          div[data-controller="artists_songss"]
+          div[data-controller="artists_songs"]
             = form.fields_for :artists_songs, ArtistsSong.new, child_index: 'featuring_index' do |artists_song_form|
               .mb-3.featuring-field-template style="display: none;"
                 = artists_song_form.label :artist_id, class: 'form-label'
@@ -38,10 +38,10 @@
                 = artists_song_form.label :artist_type, class: 'form-label'
                 = artists_song_form.select :artist_type, ArtistsSong.artist_types.keys.map { |type| [type.capitalize, type] }, {}, class: 'form-control'
 
-            div[data-target="artists_songss.fields"]
+            div[data-search-target="artists_songs.fields"]
               / This is where new "Featuring" fields will be added dynamically.
-          button.btn.btn-link[data-action="click->artists_songss#addFeaturingField"]
-            | Add Featuring Artist
+            button.btn.btn-link[data-action="click->artists_songs#addFeaturingField"]
+              | Add Featuring Artist
 
         .mb-3
           = form.label :genre_id, class: 'form-label'
