--- a/app/views/admin/songs/new.html.slim
+++ b/app/views/admin/songs/new.html.slim
@@ -19,14 +19,14 @@
           = form.label :name, class: 'form-label'
           = form.text_field :name, class: 'form-control'
 
-        = form.fields_for :artists_songs do |artists_song_form|
+        = form.fields_for :artists_songs do |artists_song|
           / Main Artist.
           .mb-3
-            = artists_song_form.label 'Main Artist', class: 'form-label'
-            = artists_song_form.select :artist_id, Artist.all.collect { |artist| [artist.name, artist.id] }, {}, class: 'form-control'
+            = artists_song.label 'Main Artist', class: 'form-label'
+            = artists_song.select :artist_id, Artist.all.collect { |artist| [artist.name, artist.id] }, {}, class: 'form-control'
 
-            = artists_song_form.label :artist_type, class: 'form-label'
-            = artists_song_form.select :artist_type, ArtistsSong.artist_types.keys.map { |type| [type.capitalize, type] }, {}, class: 'form-control'
+            = artists_song.label :artist_type, class: 'form-label'
+            = artists_song.select :artist_type, ArtistsSong.artist_types.keys.map { |type| [type.capitalize, type] }, {}, class: 'form-control'
 
           div[data-controller='artists-songs']
             = button_tag 'Add Featuring Artist', type: 'button', data: { action: 'artists-songs#addFeaturingArtist' }, class: 'btn btn-link mb-3'
@@ -36,11 +36,11 @@
                 .mb-3[data-artists-songs-target='featuringArtist']
                   .row
                     .col-md-10.offset-md-1
-                      = artists_song_form.label 'Featuring Artist', class: 'form-label'
-                      = artists_song_form.select :artist_id, Artist.all.collect { |artist| [artist.name, artist.id] }, {}, class: 'form-control'
+                      = artists_song.label 'Featuring Artist', class: 'form-label'
+                      = artists_song.select :artist_id, Artist.all.collect { |artist| [artist.name, artist.id] }, {}, class: 'form-control'
 
-                      = artists_song_form.label :artist_type, class: 'form-label'
-                      = artists_song_form.select :artist_type, ArtistsSong.artist_types.keys.map { |type| [type.capitalize, type] }, {}, class: 'form-control'
+                      = artists_song.label :artist_type, class: 'form-label'
+                      = artists_song.select :artist_type, ArtistsSong.artist_types.keys.map { |type| [type.capitalize, type] }, {}, class: 'form-control'
                     .col-md-1
                       = button_tag '', type: 'button', data: { action: 'artists-songs#removeFeaturingArtist' }, class: 'btn btn-danger' do
                         span.bi.bi-x-square-fill
