--- a/app/views/admin/songs/edit.html.slim
+++ b/app/views/admin/songs/edit.html.slim
@@ -37,18 +37,19 @@
           div[data-controller='artists-songs']
             = button_tag 'Add Featuring Artist', type: 'button', data: { action: 'artists-songs#addFeaturingArtist' }, class: 'btn btn-link mb-3'
             div[data-artists-songs-target='featuringArtistsList']
-              .featuring-field-template[style="display: none;"]
-                / Feature Artist.
-                .mb-3[data-artists-songs-target='featuringArtist']
-                  .row
-                    .col-md-10.offset-md-1
-                      = artists_song.label 'Featuring Artist', class: 'form-label'
-                      = select_tag 'song[artists_songs_attributes][][artist_id]', options_from_collection_for_select(Artist.all, 'id', 'name', '1'), class: 'form-control', disabled: true
-                      = hidden_field_tag 'song[artists_songs_attributes][][artist_type]', 'featuring', disabled: true
+              - for i in 1...@song.artists.length
+                .featuring-field-template
+                  / Feature Artist.
+                  .mb-3[data-artists-songs-target='featuringArtist']
+                    .row
+                      .col-md-10.offset-md-1
+                        = artists_song.label 'Featuring Artist', class: 'form-label'
+                        = select_tag 'song[artists_songs_attributes][][artist_id]', options_from_collection_for_select(Artist.all, 'id', 'name', @song.artists[i].id), class: 'form-control'
+                        = hidden_field_tag 'song[artists_songs_attributes][][artist_type]', 'featuring'
 
-                    .col-md-1
-                      = button_tag '', type: 'button', data: { action: 'artists-songs#removeFeaturingArtist' }, class: 'btn btn-danger' do
-                        span.bi.bi-x-square-fill
+                      .col-md-1
+                        = button_tag '', type: 'button', data: { action: 'artists-songs#removeFeaturingArtist' }, class: 'btn btn-danger' do
+                          span.bi.bi-x-square-fill
 
         .mb-3
           = form.label :genre_id, class: 'form-label'
